--- a/app/src/main/res/navigation/nav.xml
+++ b/app/src/main/res/navigation/nav.xml
@@ -72,4 +72,19 @@
         android:name="com.example.handyshop.ui.BooksFragment"
         android:label="fragment_books"
         tools:layout="@layout/fragment_books" />
+    <fragment
+        android:id="@+id/savedBooksFragment"
+        android:name="com.example.handyshop.ui.SavedBooksFragment"
+        android:label="fragment_saved_books"
+        tools:layout="@layout/fragment_saved_books" />
+    <fragment
+        android:id="@+id/searchFragment"
+        android:name="com.example.handyshop.ui.SearchFragment"
+        android:label="fragment_search"
+        tools:layout="@layout/fragment_search" />
+    <fragment
+        android:id="@+id/userProfilFragment"
+        android:name="com.example.handyshop.ui.UserProfilFragment"
+        android:label="fragment_uset_profil"
+        tools:layout="@layout/fragment_uset_profil" />
 </navigation>
